<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="edit_back_content_description">뒤로가기</string>
    <string name="register_back_content_description">뒤로가기</string>

    <string name="editor_crop_touch_mode_guide_image_content_description">자르기 터치 모드 가이드 이미지</string>
    <string name="editor_crop_touch_mode_content_description">자르기 터치 모드 변경</string>
    <string name="editor_gifticon_delete_content_description">기프티콘 제거 버튼</string>
    <string name="editor_gifticon_content_description">기프티콘 이미지</string>
    <string name="editor_gifticon_thumbnail_content_description">기프티콘 썸네일 이미지</string>
    <string name="editor_gifticon_thumbnail_clear_content_description">썸네일 제거 버튼</string>
    <string name="editor_goto_built_in_thumbnail_content_description">내장 썸네일로 이동하기</string>
    <string name="editor_gifticon_text_clear_content_description">텍스트 제거 버튼</string>

    <string name="register_title">쿠폰 등록</string>

    <string name="editor_gifticon_preview_cash">금액권으로 전환</string>
    <string name="editor_gifticon_preview_memo_hint">함께 저장 할 메모를 입력해 주세요.</string>
    <string name="editor_gifticon_preview_name_hint">제품명을 등록해 주세요.</string>
    <string name="editor_gifticon_preview_brand_hint">브랜드를 등록해 주세요.</string>
    <string name="editor_gifticon_preview_barcode_hint">바코드를 등록해 주세요.</string>
    <string name="editor_gifticon_preview_expired_hint">유효기간을 등록해 주세요.</string>
    <string name="editor_gifticon_preview_balance_hint">금액을 등록해 주세요.</string>

    <string name="editor_gifticon_preview_thumbnail_recommend1">마땅한 썸네일이 없다면?</string>
    <string name="editor_gifticon_preview_thumbnail_recommend2">썸네일 에셋 사용하기</string>

    <string name="editor_gifticon_preview">미리보기</string>
    <string name="editor_gifticon_property_memo">메모</string>
    <string name="editor_gifticon_property_thumbnail">썸네일</string>
    <string name="editor_gifticon_property_name">제품명</string>
    <string name="editor_gifticon_property_brand">브랜드</string>
    <string name="editor_gifticon_property_barcode">바코드</string>
    <string name="editor_gifticon_property_expired">유효기간</string>
    <string name="editor_gifticon_property_balance">금액</string>

    <string name="editor_crop_touch_mode_guide">인식할 구역을 문질러\n직접 선택해 보세요</string>

    <string name="editor_crop_touch_mode_tutorial">%s 영역을 직접 문질러 보세요.</string>
    <string name="editor_crop_window_mode_tutorial">%s 영역을 직접 크롭해 보세요.</string>

    <string name="editor_crop_touch_mode">문지르기</string>
    <string name="editor_crop_window_mode">크롭하기</string>

    <string name="editor_preview_balance">%s 원</string>

    <string name="editor_gifticon_register">쿠폰 등록하기</string>
    <string name="editor_gifticon_register_valid">%d개 쿠폰 등록하기</string>

    <string name="editor_gifticon_delete_message">사진을 삭제하시겠습니까?</string>
    <string name="editor_gifticon_delete_ok">네,삭제할래요</string>
    <string name="editor_gifticon_delete_cancel">아니요</string>

    <string name="register_gifticon_exit_message">쿠폰을 등록하지 않고 나가시겠어요?</string>
    <string name="register_gifticon_exit_ok">네,나갈래요</string>
    <string name="register_gifticon_exit_cancel">아니요</string>

    <string name="editor_gifticon_delete_success">해당 이미지를 제거 했습니다</string>
    <string name="editor_gifticon_delete_revert">취소</string>

    <string name="editor_gifticon_register_partial_success">%d개의 쿠폰을 우선 등록했어요</string>
    <string name="editor_gifticon_register_revert">취소</string>
    <string name="editor_gifticon_register_failed">등록할 수 없어요.</string>

    <string name="edit_title">쿠폰 편집</string>
    <string name="edit_gifticon_edit">쿠폰 편집하기</string>

    <string name="edit_gifticon_exit_message">쿠폰을 편집하지 않고 나가시겠어요?</string>
    <string name="edit_gifticon_exit_ok">네,나갈래요</string>
    <string name="edit_gifticon_exit_cancel">아니요</string>

    <string name="edit_gifticon_failed">편집할 수 없어요.</string>
</resources>