<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_toolbar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            app:tint="@color/font_dark_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/register_back_content_description"
            android:src="@drawable/icon_back"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAppearance="@style/Text.Title2"
            android:textColor="@color/font_dark_gray"
            android:text="@string/register_title"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_selected"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:clipToPadding="false"
        app:layout_constraintTop_toBottomOf="@id/container_toolbar"
        tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_editor_gifticon"
        android:background="@color/bg"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_preview"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/list_selected"
        app:layout_constraintBottom_toTopOf="@id/container_footer"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_editor_preview"
        android:background="@color/bg"/>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/container_crop"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/container_footer"
        app:layout_constraintTop_toBottomOf="@id/list_selected"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_footer"
        android:layout_width="match_parent"
        android:layout_height="252dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_editor_chip"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginStart="24dp"
            android:paddingStart="0dp"
            android:paddingEnd="20dp"
            android:clipToPadding="false"
            app:layout_constraintTop_toTopOf="@id/btn_preview"
            app:layout_constraintBottom_toBottomOf="@id/btn_preview"
            android:nestedScrollingEnabled="false"
            tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_editor_property_chip"
            tools:itemCount="5"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btn_preview"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:minWidth="32dp"
            android:paddingHorizontal="8dp"
            android:paddingVertical="6dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_gravity="center_vertical"
            android:background="@drawable/bg_editor_preview_chip">

            <TextView
                android:id="@+id/text_preview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="4dp"
                android:paddingEnd="6dp"
                android:autoSizeTextType="none"
                app:layout_constraintStart_toEndOf="@id/icon_preview"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:gravity="center_vertical"
                android:lines="1"
                android:textColor="@color/editor_preview_chip"
                android:textAppearance="@style/Text.SubTitle2"
                android:text="@string/editor_gifticon_preview" />

            <ImageView
                android:id="@+id/icon_preview"
                android:layout_width="16dp"
                android:layout_height="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:contentDescription="@null"
                app:tint="@color/editor_preview_chip"
                android:src="@drawable/icon_preview"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/decoration"
            android:layout_width="12dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/list_editor_chip"
            app:layout_constraintBottom_toBottomOf="@id/list_editor_chip"
            app:layout_constraintStart_toEndOf="@id/btn_preview"
            android:background="@drawable/editor_property_chip_decoration"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_editor"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/btn_preview"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/section_editor_text"
            tools:itemCount="1"/>

        <TextView
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center"
            android:backgroundTint="@color/bg_editor_register"
            android:background="@drawable/bg_rect_r16"
            android:textColor="@color/text_editor_register"
            android:textAppearance="@style/Text.Title7"
            android:text="@string/editor_gifticon_register"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>