<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_preview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="24dp"
    android:layout_marginVertical="16dp"
    app:layout_constraintTop_toBottomOf="@id/list_selected"
    app:layout_constraintBottom_toTopOf="@id/list_editor_chip"
    app:cardCornerRadius="16dp"
    app:cardBackgroundColor="@color/white"
    app:strokeWidth="1dp"
    app:strokeColor="@color/light_gray"
    app:cardElevation="10dp">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_preview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_start"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintGuide_begin="20dp"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_end"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintGuide_end="20dp"/>

            <TextView
                android:id="@+id/text_gifticon_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="@id/guide_start"
                android:textAppearance="@style/Text.Title5"
                android:textColor="@color/font_dark_gray"
                android:text="@string/editor_preview_gifticon_info"/>

            <ImageView
                android:id="@+id/image_thumbnail"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/text_gifticon_info"
                app:layout_constraintStart_toStartOf="@id/guide_start"
                android:scaleType="centerCrop"
                android:contentDescription="@null"
                android:backgroundTint="@color/light_gray"
                android:background="@drawable/bg_rect_r8"/>

            <TextView
                android:id="@+id/text_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/image_thumbnail"
                app:layout_constraintStart_toStartOf="@id/guide_start"
                android:textAppearance="@style/Text.Body5"
                android:textColor="@color/font_gray"
                android:text="@string/editor_gifticon_property_name"/>

            <TextView
                android:id="@+id/text_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/guide_start"
                app:layout_constraintEnd_toEndOf="@id/guide_end"
                app:layout_constraintTop_toBottomOf="@id/text_name_label"
                android:textAppearance="@style/Text.Body1"
                android:textColor="@color/font_dark_gray"
                tools:text="스타벅스 아메리카노"/>

            <ImageView
                android:id="@+id/icon_name_empty"
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:layout_constraintStart_toStartOf="@id/text_name_label"
                app:layout_constraintTop_toBottomOf="@id/text_name_label"
                android:visibility="invisible"
                android:contentDescription="@null"
                android:src="@drawable/icon_empty_info"/>

            <TextView
                android:id="@+id/text_brand_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                app:layout_constraintTop_toBottomOf="@id/text_name_label"
                app:layout_constraintStart_toStartOf="@id/guide_start"
                android:textAppearance="@style/Text.Body5"
                android:textColor="@color/font_gray"
                android:text="@string/editor_gifticon_property_brand"/>

            <TextView
                android:id="@+id/text_brand"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/guide_start"
                app:layout_constraintEnd_toEndOf="@id/guide_end"
                app:layout_constraintTop_toBottomOf="@id/text_brand_label"
                android:textAppearance="@style/Text.Body1"
                android:textColor="@color/font_dark_gray"
                tools:text="스타벅스"/>

            <ImageView
                android:id="@+id/icon_brand_empty"
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:layout_constraintStart_toStartOf="@id/text_brand_label"
                app:layout_constraintTop_toBottomOf="@id/text_brand_label"
                android:visibility="invisible"
                android:contentDescription="@null"
                android:src="@drawable/icon_empty_info"/>

            <TextView
                android:id="@+id/text_expired_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                app:layout_constraintTop_toBottomOf="@id/text_brand_label"
                app:layout_constraintStart_toStartOf="@id/guide_start"
                android:textAppearance="@style/Text.Body5"
                android:textColor="@color/font_gray"
                android:text="@string/editor_gifticon_property_expired"/>

            <TextView
                android:id="@+id/text_expired"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/guide_start"
                app:layout_constraintEnd_toEndOf="@id/guide_end"
                app:layout_constraintTop_toBottomOf="@id/text_expired_label"
                android:lines="1"
                android:textAppearance="@style/Text.Body1"
                android:textColor="@color/font_dark_gray"
                tools:text="2021-11-06"/>

            <ImageView
                android:id="@+id/icon_expired_empty"
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:layout_constraintStart_toStartOf="@id/text_expired_label"
                app:layout_constraintTop_toBottomOf="@id/text_expired_label"
                android:visibility="invisible"
                android:contentDescription="@null"
                android:src="@drawable/icon_empty_info"/>

            <TextView
                android:id="@+id/text_memo_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                app:layout_constraintTop_toBottomOf="@id/text_expired_label"
                app:layout_constraintStart_toStartOf="@id/guide_start"
                android:textAppearance="@style/Text.Body5"
                android:textColor="@color/font_gray"
                android:text="@string/editor_gifticon_property_memo"/>

            <TextView
                android:id="@+id/text_memo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="44dp"
                android:padding="8dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintTop_toBottomOf="@id/text_memo_label"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/guide_start"
                app:layout_constraintEnd_toEndOf="@id/guide_end"
                android:gravity="center_vertical"
                android:background="@drawable/bg_rect_r8_gray_l1"
                tools:text="글자글자를글자글자를글자글자를글자글자를"/>

            <TextView
                android:id="@+id/text_memo_length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintEnd_toEndOf="@id/text_memo"
                app:layout_constraintBottom_toBottomOf="@id/text_memo"
                android:textAppearance="@style/Text.Body5"
                android:textColor="@color/font_gray"
                tools:text="0/20"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</com.google.android.material.card.MaterialCardView>